# DHCP-configurator

./: CMakeLists.txt  README.md  sshcmdexecfiletransfer.cpp  sshcmdexecfiletransfer.h  widget.cpp  widget.h  widget.ui
